--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-email/components": "^0.0.34",
+    "@react-email/render": "^1.0.5",
     "@types/airtable": "^0.10.0",
+    "@types/bcryptjs": "^2.4.6",
     "@webflow/webflow-cli": "^1.6.9",
     "airtable": "^0.12.2",
+    "bcryptjs": "^3.0.2",
     "lodash.groupby": "^4.6.0",
     "next": "^13.5.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "resend": "^4.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
